Bug 1880710 - Make `HTMLEditor::IsEmpty` check whether the editing host is empty r=m_kato

It checks whether the document body itself is empty or not.  However, if there
is only a shadow DOM hosts, it considers the content is empty.  Therefore,
`HTMLEditor::HandleDeleteSelection` does nothing.

I think that it should check whether current editing host is empty or not.
That does not work without selection ranges, but I think it's fine in most
cases.

Differential Revision: https://phabricator.services.mozilla.com/D202274